--- a/index.html
+++ b/index.html
@@ -212,22 +212,20 @@
             people!</p>
         </div>
 
-        <div>
-          <div>
-            <label for="">Name</label>
-            <input type="text" name="" id="" class="form" required>
-          </div>
-          <div>
-            <label for="">Email</label>
-            <input type="email" name="" id="" class="form" required>
-          </div>
-          <div>
-            <label for="">Message</label>
-            <input type="text" name="" id="" class="form" required>
-          </div>
-          <button type="submit" class="btn">Send Message</button>
-
-        </div>
+        <div class="form-container">
+          <form action="#" method="post">
+              <label for="name">Name</label>
+              <input type="text" id="name" name="name" required>
+  
+              <label for="email">Email</label>
+              <input type="email" id="email" name="email" required>
+  
+              <label for="message">Message</label>
+              <textarea id="message" name="message" required></textarea>
+  
+              <button type="submit" class="send-button">Send Message</button>
+          </form>
+      </div>
         
 
       </div>
